Fix Alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -37,8 +37,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     min-height: 100vh;
-    padding-top: 120px;
 }
 
 .wrapper{
